[package]
name = "mnemnos-types"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.93"
# note: this should work, but cargo was picking up syntect dep as using c-binding instead of rust native fancy-regex
comrak = { git = "https://github.com/inanna-malick/comrak", rev = "3fa07060e03d59e641335a44a2dffa0e10ca61e4" }


serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yew = "0.21"