[package]
name = "mnemnos-wasm"
version = "0.1.0"
authors = ["Inanna Malick"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
mnemnos-types = {path = "../mnemnos-types"}
serde = { version = "1.0", features = ["derive"] }
strum = "0.26"
strum_macros = "0.26"
gloo = "0.11"
gloo-net = {version="0.6", features=["json"]}
yew = { version = "0.21", features = ["csr"] }
serde_json = "1.0"
tera = "1.20.0"
yew-autoprops = "0.4.1"

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
	"CssStyleDeclaration"
]
