[package]
name = "mnemnos-wasm"
version = "0.1.0"
authors = ["Inanna Malick"]
edition = "2021"
license = "MIT OR Apache-2.0"


[dependencies]
gloo = "0.11"
gloo-net = {version="0.6", features=["json"]}
mnemnos-types = {path = "../mnemnos-types"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.26"
strum_macros = "0.26"
yew = { version = "0.21", features = ["csr"] }
yew-autoprops = "0.4.1"


[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
	"CssStyleDeclaration"
]
