[package]
name = "mnemnos-worker"
version = "0.1.0"
edition = "2021"
authors = [ "Inanna Malick <inanna@cloudflare.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
mnemnos-types = { path = "../mnemnos-types"}
worker = { version="0.4.2", features=['http', 'axum'] }
worker-macros = { version="0.4.2", features=['http'] }
axum  = { version = "0.7", default-features = false, features = ["json", "macros"] }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
serde_json = "1.0.133"
futures = "0.3.31"
anyhow = "1.0.93"
reqwasm = "0.5.0"
reqwest_wasi = "0.11.16"
